--- a/package.json
+++ b/package.json
@@ -7,12 +7,21 @@
   "private": true,
   "license": "BSD",
   "dependencies": {
+    "async": "^2.6.0",
+    "aws-sdk": "2.212.1",
+    "bcrypt": "^1.0.3",
     "express": "4.13.4",
+    "lodash": "^4.17.5",
     "redis": "2.8.0",
     "socket.io": "2.0.4",
     "socket.io-redis": "5.2.0"
   },
   "scripts": {
     "start": "node index.js"
+  },
+  "eslintConfig": {
+    "globals": {
+      "Vue": true
+    }
   }
 }
