--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "async": "^2.6.0",
     "aws-sdk": "2.212.1",
     "bcrypt": "^1.0.3",
+    "compression": "^1.7.2",
     "express": "4.13.4",
+    "express-sslify": "^1.2.0",
     "lodash": "^4.17.5",
     "redis": "2.8.0",
     "socket.io": "2.0.4",
     "socket.io-redis": "5.2.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "LOCAL=true REGION=us-east-1 ENV_NAME=production node index.js"
   },
   "eslintConfig": {
     "globals": {
