--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,11 @@
 version: 2
 jobs:
   build:
-    docker:
-      - image: 209640446841.dkr.ecr.us-east-1.amazonaws.com/chat:$CIRCLE_SHA1
-        aws_auth:
-          aws_access_key_id: $AWS_ACCESS_KEY_ID
-          aws_secret_access_key: $AWS_SECRET_ACCESS_KEY
     steps:
-      - run: echo "Built!"
+      - run: setup_remote_docker
+      - run: checkout
+      - run: docker build -t 209640446841.dkr.ecr.us-east-1.amazonaws.com/chat:$CIRCLE_SHA1 .
+      - run: docker push 209640446841.dkr.ecr.us-east-1.amazonaws.com/chat:$CIRCLE_SHA1
   deploy:
-    docker:
-      - image: 209640446841.dkr.ecr.us-east-1.amazonaws.com/chat:$CIRCLE_SHA1
-        aws_auth:
-          aws_access_key_id: $AWS_ACCESS_KEY_ID
-          aws_secret_access_key: $AWS_SECRET_ACCESS_KEY
     steps:
       - run: echo "Pushed!"
