--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,15 @@
 version: 2
 jobs:
   build:
+    docker:
+      - image: busybox
     steps:
       - run: setup_remote_docker
       - run: checkout
       - run: docker build -t 209640446841.dkr.ecr.us-east-1.amazonaws.com/chat:$CIRCLE_SHA1 .
       - run: docker push 209640446841.dkr.ecr.us-east-1.amazonaws.com/chat:$CIRCLE_SHA1
   deploy:
+    docker:
+      - image: busybox
     steps:
       - run: echo "Pushed!"
