Primary build image needs to have docker

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: busybox
+      - image: docker
     steps:
       # Fetch code from the repo
       - checkout
