Try to auth with ECR

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,11 @@ jobs:
       - setup_remote_docker:
             docker_layer_caching: true
 
+      # Add the aws CLI
+      - run: pip install awscli --upgrade --user
+
       # Build and push
+      - run: `aws ecr get-login`
       - run: docker build -t 209640446841.dkr.ecr.us-east-1.amazonaws.com/chat:$CIRCLE_SHA1 .
       - run: docker push 209640446841.dkr.ecr.us-east-1.amazonaws.com/chat:$CIRCLE_SHA1
   deploy:
