--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,9 @@ jobs:
             docker_layer_caching: true
 
       # Add the aws CLI
-      - run: pip install awscli --upgrade --user
+      - run: curl -O https://bootstrap.pypa.io/get-pip.py \
+          python get-pip.py --user \
+          pip install awscli --upgrade --user
 
       # Build and push
       - run: $(aws ecr get-login)
