Need more in the path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
           command: |
             curl -O https://bootstrap.pypa.io/get-pip.py
             python get-pip.py --user
+            export PATH=~/.local/bin:$PATH
             pip install awscli --upgrade --user
 
       # Build and push
