Updates to the pipeline and service

--- a/chat-service.yml
+++ b/chat-service.yml
@@ -136,6 +136,8 @@ Resources:
     Properties:
       HealthCheckIntervalSeconds: 6
       HealthCheckPath: /
+      Matcher:
+        HttpCode: 301
       HealthCheckProtocol: HTTP
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 2
