--- a/pipeline.yml
+++ b/pipeline.yml
@@ -10,6 +10,9 @@ Parameters:
     Type: String
   EnvironmentName:
     Type: String
+  CertificateArn:
+    Type: String
+    Description: ARN of the Amazon Certificate Manager SSL certificate to use for this app
 
 Resources:
   # Create the ECR respository to hold built docker images
@@ -225,7 +228,8 @@ Resources:
                 Capabilities: CAPABILITY_IAM
                 ParameterOverrides: !Sub |
                   {
-                    "EnvironmentName": "${EnvironmentName}"
+                    "EnvironmentName": "${EnvironmentName}",
+                    "CertificateArn": "${CertificateArn}"
                   }
               InputArtifacts:
                 - Name: Source
