Updates to add the HTTPS support

--- a/chat-service.yml
+++ b/chat-service.yml
@@ -98,7 +98,9 @@ Resources:
   # as monitor the number of running tasks and replace any that have crashed
   Service:
     Type: AWS::ECS::Service
-    DependsOn: LoadBalancerRule
+    DependsOn:
+      - HTTPRule
+      - HTTPSRule
     Properties:
       ServiceName: !Ref 'ServiceName'
       Cluster:
