--- a/pipeline.yml
+++ b/pipeline.yml
@@ -13,6 +13,14 @@ Parameters:
   CertificateArn:
     Type: String
     Description: ARN of the Amazon Certificate Manager SSL certificate to use for this app
+  DomainZone:
+    Type: String
+    Default: fargate.chat.
+    Description: The name of the Route53 hosted zone for this app
+  DomainName:
+    Type: String
+    Default: fargate.chat.
+    Description: The specific alias name for the application
 
 Resources:
   # Create the ECR respository to hold built docker images
@@ -229,7 +237,9 @@ Resources:
                 ParameterOverrides: !Sub |
                   {
                     "EnvironmentName": "${EnvironmentName}",
-                    "CertificateArn": "${CertificateArn}"
+                    "CertificateArn": "${CertificateArn}",
+                    "DomainZone": "${DomainZone}",
+                    "DomainName": "${DomainName}"
                   }
               InputArtifacts:
                 - Name: Source
