--- a/cluster.yml
+++ b/cluster.yml
@@ -9,6 +9,14 @@ Parameters:
   CertificateArn:
     Type: String
     Description: ARN of the Amazon Certificate Manager SSL certificate to use for this app
+  DomainZone:
+    Type: String
+    Default: fargate.chat.
+    Description: The name of the Route53 hosted zone for this app
+  DomainName:
+    Type: String
+    Default: fargate.chat.
+    Description: The specific alias name for the application
 
 Mappings:
   # Hard values for the subnet masks. These masks define
