--- a/chat-service.yml
+++ b/chat-service.yml
@@ -82,6 +82,8 @@ Resources:
               Value:
                 Fn::ImportValue:
                   !Join [':', [!Ref 'EnvironmentName', 'RedisEndpoint']]
+            - Name: DYNAMODB_ENDPOINT
+              Value: !Join ['.', ['https://dynamodb', !Ref ' AWS::Region', 'amazonaws.com']]
             - Name: ENV_NAME
               Value: !Ref 'EnvironmentName'
           PortMappings:
