--- a/services/client/package.json
+++ b/services/client/package.json
@@ -7,14 +7,14 @@
   "license": "BSD",
   "dependencies": {
     "async": "^2.6.0",
-    "aws-sdk": "2.212.1",
-    "bcrypt": "^1.0.3",
+    "aws-sdk": "2.262.1",
+    "bcrypt": "2.0.1",
     "compression": "^1.7.2",
-    "express": "4.13.4",
+    "express": "4.16.3",
     "express-sslify": "^1.2.0",
     "lodash": "^4.17.5",
     "redis": "2.8.0",
-    "socket.io": "2.0.4",
+    "socket.io": "2.1.1",
     "socket.io-redis": "5.2.0"
   },
   "devDependencies": {
