--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,25 +9,35 @@ services:
     networks:
       - chat
     ports:
-      - 6379:6379
+      - 6379
 
-  # Launch a local version of DynamoDB
-  dynamodb-local:
+  # Launch localstack (https://github.com/localstack/localstack)
+  # This container mimics AWS services locally for offline testing
+  # and development purposes.
+  local-stack:
+    image: localstack/localstack
     networks:
       - chat
-    build: ./deps/dynamodb-local
     ports:
-      - 8000:8000
+      # DyanmoDB Local
+      - 4569
+      # SNS local
+      - 4575
+      # SQS local
+      - 4576
 
-  # Ephemeral container used for creating the tables in DynamoDB
-  dynamodb-tables:
+  # Ephemeral container used for creating the tables in
+  # the local DynamoDB tables, SNS topics, and SQS queues
+  bootstrap-resources:
     depends_on:
-      - dynamodb-local
+      - local-stack
     networks:
       - chat
-    build: ./deps/dynamodb-tables
+    build: ./deps/bootstrap-resources
     environment:
-      DYNAMODB_ENDPOINT: http://dynamodb-local:8000
+      DYNAMODB_ENDPOINT: http://local-stack:4569
+      SQS_ENDPOINT: http://local-stack:4576
+      SNS_ENDPOINT: http://local-stack:4575
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
 
@@ -35,7 +45,7 @@ services:
   client:
     depends_on:
       - redis
-      - dynamodb-tables
+      - bootstrap-resources
     networks:
       - chat
     build: ./services/client
@@ -43,7 +53,9 @@ services:
       LOCAL: "true"
       ENV_NAME: test
       REDIS_ENDPOINT: redis
-      DYNAMODB_ENDPOINT: http://dynamodb-local:8000
+      DYNAMODB_ENDPOINT: http://local-stack:4569
+      SQS_ENDPOINT: http://local-stack:4576
+      SNS_ENDPOINT: http://local-stack:4575
       AWS_ACCESS_KEY_ID: test
       AWS_SECRET_ACCESS_KEY: test
     ports:
